fix: add title tag to roast beef and cheddar sliders recipe

--- a/recipes/roast-beef-and-cheddar-sliders.html
+++ b/recipes/roast-beef-and-cheddar-sliders.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Roast beef and cheddar sliders</title>
   </head>
   <body>
     <h1>Roast beef and cheddar sliders</h1>
