feat: add title and recipes links to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meat charset="utf-8"
-    <title></title>
+    <meta charset="utf-8">
+    <title>Odin Recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/roast-beef-and-cheddar-sliders.html">Roast beff and cheddar sliders</a>
-
+    <ul>
+      <li><a href="./recipes/roast-beef-and-cheddar-sliders.html">Roast beff and cheddar sliders</a></li>
+      <li><a href="./recipes/banana-pudding.html">Banana pudding</a></li>
+      <li><a href="./recipes/mac-and-cheese.html">Mac and cheese</a></li>
+    </ul>
   </body>
 </html>
