fix: correct images path

--- a/recipes/roast-beef-and-cheddar-sliders.html
+++ b/recipes/roast-beef-and-cheddar-sliders.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Roast beef and cheddar sliders</h1>
 
-    <img src="../images/roast-beef-and-cheddar-sliders" alt="roast beef and cheddar sliders">
+    <img src="../images/roast-beef-and-cheddar-sliders.jpg" alt="roast beef and cheddar sliders">
 
     <h2>Description</h2>
     <p>These roast beef and Cheddar sliders are so easy to put together, bake in just a few minutes, and are just as delicious as the fast-food favorite from your favorite roast beef restaurant. And you don't have to leave home.</p>
