--- a/recipes/banana-pudding.html
+++ b/recipes/banana-pudding.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Banana pudding</h1>
 
-    <img src="banana-pudding.jpg" alt="banana pudding">
+    <img src="../images/banana-pudding.jpg" alt="banana pudding">
 
     <h2>Description</h2>
     <p>A banana pudding with cream cheese, condensed milk, and vanilla wafers that's quick and easy to make. Enjoy!</p> 
